[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/LuneSheet.png" type="Texture" id=1]
[ext_resource path="res://Characters/Lune.gd" type="Script" id=2]

[sub_resource type="Animation" id=8]
resource_name = "Cast"
length = 2.0
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shape:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 20, 18, 24, 32, 6, 32, 2, 18, -2, 18, -6, 23, -6, 32, -24, 32, -24, 26, -18, 22, -20, 18, -26, 18, -26, 12, -22, 12, -22, 10, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
}, {
"args": [  ],
"method": "fire_blast"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shape:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 20, 18, 24, 32, 6, 32, 2, 18, -2, 18, -6, 23, -6, 32, -24, 32, -24, 26, -18, 22, -20, 18, -26, 18, -26, 12, -22, 12, -22, 10, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/SwordLeft:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -18, -48, -20, -48, -28, -32, -28, 8, -34, 2, -36, 2, -36, 8, -32, 12, -18, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/SwordRight:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -18, -32, -26, -48, -28, -48, -28, 12, -18, 12, -14, 12, -10, 8, -10, 2, -12, 2, -18, 8 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shape:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 20, 18, 24, 32, 6, 32, 2, 18, -2, 18, -6, 23, -6, 32, -24, 32, -24, 26, -18, 22, -20, 18, -26, 18, -26, 12, -22, 12, -22, 10, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/SwordLeft:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -18, -48, -20, -48, -28, -32, -28, 8, -34, 2, -36, 2, -36, 8, -32, 12, -18, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/SwordRight:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -18, -32, -26, -48, -28, -48, -28, 12, -18, 12, -14, 12, -10, 8, -10, 2, -12, 2, -18, 8 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Thrust"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shape:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 20, 18, 24, 32, 6, 32, 2, 18, -2, 18, -6, 23, -6, 32, -24, 32, -24, 26, -18, 22, -20, 18, -26, 18, -26, 12, -22, 12, -22, 10, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TurnLeft"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shape:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 30, 20, 30, 26, 14, 26, 14, 20, 2, 20, 2, 18, -2, 18, -6, 23, -6, 32, -24, 32, -24, 26, -18, 22, -20, 18, -26, 18, -26, 12, -22, 12, -22, 10, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "TurnRight"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shape:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 20, 18, 24, 32, 6, 32, 2, 18, -2, 18, -2, 20, -14, 20, -14, 26, -30, 26, -30, 20, -26, 16, -26, 12, -22, 12, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[node name="Lune" type="Sprite" groups=["Actor", "Player"]]
texture = ExtResource( 1 )
hframes = 9
script = ExtResource( 2 )

[node name="GunLeft" type="Node2D" parent="."]
position = Vector2( -11.5, -16 )
rotation = -2.0944
scale = Vector2( -1, 1 )

[node name="GunRight" type="Node2D" parent="."]
position = Vector2( 11.5, -16 )
rotation = 2.0944

[node name="BeamOrigin" type="Node2D" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.5, 0.5 )

[node name="Body" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Shape" type="CollisionPolygon2D" parent="Body"]
polygon = PoolVector2Array( 12, -10, 18, -4, 22, 0, 22, 12, 26, 12, 26, 18, 20, 18, 24, 32, 6, 32, 2, 18, -2, 18, -6, 23, -6, 32, -24, 32, -24, 26, -18, 22, -20, 18, -26, 18, -26, 12, -22, 12, -22, 10, -22, 1, -12, -10, -8, -10, -8, -22, -6, -24, 8, -24, 8, -10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="SwordLeft" type="CollisionPolygon2D" parent="Area2D"]
visible = false
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -18, -48, -20, -48, -28, -32, -28, 8, -34, 2, -36, 2, -36, 8, -32, 12, -18, 12 )

[node name="SwordRight" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2( 23, 0 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -18, -32, -26, -48, -28, -48, -28, 12, -18, 12, -14, 12, -10, 8, -10, 2, -12, 2, -18, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cast = SubResource( 8 )
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 4 )
anims/Thrust = SubResource( 5 )
anims/TurnLeft = SubResource( 6 )
anims/TurnRight = SubResource( 7 )

[connection signal="area_entered" from="Body" to="." method="_on_area_entered"]
